   allocated as an atomic (i.e. pointerless) region of memory, the garbage
   collector has to work less for marking and collecting them.

 - The function ecl_alloc_simple_vector() also creates arrays as a compact unit
   with pointerfree memory whenever possible.

 - The functions cl_alloc_simple_{base,extended}_string() now carry the prefix
   ecl_ instead of cl_, and they are simple aliases for ecl_alloc_simple_vector.

 - The option --enable-slow-config is now always on in Solaris and it does not
   take more time than an ordinary build using --with-system-gmp=no

 - ECL now implements weak pointers. The interface is
	(ext:make-weak-pointer value) => weak-pointer
	(ext:weak-pointer-value weak-pointer) => value
   and it defines a new built-in type, EXT:WEAK-POINTER

 - ECL now implements WITHOUT-INTERRUPTS similarly to SBCL. It creates three
   local macros, ALLOW-WITH-INTERRUPTS and WITH-LOCAL-INTERRUPTS, and an
   additional one WITH-RESTORED-INTERRUPTS, which executes the forms with
   the value of interrupts of the forms that surround WITHOUT-INTERRUPTS.

 - Symbol SI:*INTERRUPT-DISABLE* changes name to SI:*INTERRUPTS-DISABLED*.

 - Under OS X, you can use the environment variable ABI to select between
   32-bits (ABI=32) or 64-bits pointers (ABI=64).

 - New function MP:PROCESS-JOIN, waits for a thread to terminate.

* Bugs fixed:

 - WITH-LOCK might run into a race condition when the lock acquisition process
   was interrupted.

 - The following functions are now interrupt safe: MP:MAKE-LOCK.

 - The use of GIVEUP-LOCK in WITH-LOCK is now protected against interrupts.

 - Forms in toplevel EVAL-WHEN or PROGN statements did not have a proper value
   of bytecodes.definition, causing the debugger to enter an infinite chain
   of errors

 - In Solaris 8 ECL failed because it did not find inttypes.h

 - When signbit() is not available, ECL now looks for existence of copysign.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***